--- a/ed_scripts/Bayesian Nets.ipynb
+++ b/ed_scripts/Bayesian Nets.ipynb
@@ -35,9 +35,11 @@
     "\n",
     "1.3 [Implementing Bayesian Linear Regression](#BLR3)\n",
     "\n",
-    "### [2. Approximate Inference](#ApproxInf)\n",
+    "###   [2. Approximate Inference](#ApproxInf)\n",
     "\n",
-    "2.1 [Limits of Exact Inference](#ApproxInf2)  \n",
+    "2.1   [Limits of Exact Inference](#ApproxInf2)  \n",
+    "\n",
+    "2.1.1 [Optional Read: Bayesian Model Comparison](#addApprox)\n",
     "\n",
     "2.2 [Variational Inference](#ApproxInf3)\n",
     "\n",
@@ -534,22 +536,34 @@
     "\n",
     "The critical component here is the integral in the denominator, or the _marginal likelihood_. The posterior can only be exactly evaluated if this integral is tractable, and therefore, solvable. This is true only for a very limited range of distribution families, which includes the exponential family - the Gaussian being the most prominent member -,the Gamma distribution, the Beta distribution and so on. However, for many complex hiearchical models, such as neural nets, the integral is in fact intractable and therefore cannot be exactly solved.\n",
     "\n",
-    "One may observe that the marginal likelihood can be regarded somewhat as a normalizing constant, and that in fact if we were simply interested the shape of the posterior, one could use the relationship:\n",
+    "There are two main approaches to tackling this limitation. One tries to estimate the true posterior with a probability distribution that makes the integral tractable, and is called variational inference. The other approach, Markov-chain-Monte-Carlo,samples directly from the posterior using Markov chains, evaluate the likelihood * prior over these samples and use the results instead of evaluating the integral."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='addApprox'></a>\n",
+    "__Optional Read: Marginal likelihood and Bayesian Model Comparison __\n",
+    "<br><br>\n",
+    "While marginal likelihood typically impedes exact inference of the posterior, one may observe that the marginal likelihood can be regarded somewhat as a normalizing constant, and that in fact if we were simply interested in the shape of the posterior, one could use the relationship:\n",
     "\n",
     "$$ Posterior \\hspace{0.25cm} \\propto \\hspace{0.25cm} P(D \\mid \\theta) \\cdot P(\\theta)$$\n",
     "\n",
-    "to get an unnormalized density proportional to the true posterior, avoiding the pesky integral entirely. So why approximate?\n",
+    "to get an unnormalized density proportional to the true posterior, avoiding the pesky integral entirely. So why would we use approximate inference?\n",
     "\n",
-    "A large part is that the marginal likelihood, also called _model evidence_, is used for _model comparison_. This refers to comparing different types of models - between a ResNet and a DenseNet for example - or simply the same model with different hyperparameters on a given dataset, like kernel size, learning rate, and so on. Because models can all have very different values for their true marginal likelihoods, knowing the unnormalized density for the posterior of a given model makes comparison unreasonable.\n",
+    "A large part is that the marginal likelihood, also called _model evidence_, is used for _model comparison_. This refers to comparing different types of models - between a linear regression and decision trees for example - or simply the same model with different hyperparameters on a given dataset, like kernel size, learning rate, and so on. Because models can all have very different values for their true marginal likelihoods, knowing the unnormalized density for the posterior of a given model makes comparison unreasonable.\n",
     "\n",
-    "For those interested in how model comparison works, it simply uses Bayes' Theorem again, where: \n",
+    "Bayesin model comparison uses the Bayes' Theorem again, where this time we try to evaluate the posterior probability of a model given data: \n",
     "<br><br>\n",
-    "$$ P(Model \\mid Data) \\hspace{0.5cm}=\\hspace{0.5cm}\\frac{\\overbrace{P(Data \\mid Model)}^\\text{Marginal Likelihood}\\cdot \\overbrace{P(Model)}^{\\text{Model Prior}}}{P(Data)} $$\n",
-    "\n",
-    "This is the posterior distribution of the model. Notice that to evaluate this we need the marginal likelihood, as previously stated. Once this posterior is evaluated for a model, we can compare it to posteriors of the other models. An example comparison between two hypothetical models M1 and M2 is shown below:\n",
+    "$$ P(Model \\mid Data) \\hspace{0.5cm}=\\hspace{0.5cm}\\frac{\\overbrace{P(Data \\mid Model)}^\\text{Model Evidence}\\cdot \\overbrace{P(Model)}^{\\text{Model Prior}}}{P(Data)} $$\n",
+    "<br><br>\n",
+    "Notice that to evaluate this we need the marginal likelihood, as previously stated. Once this posterior is evaluated for a model, we can compare it to posteriors of the other models. An example comparison between two hypothetical models M1 and M2 is shown below:\n",
     "<br><br>\n",
     "\n",
-    "$$ \\frac{P(M1 \\mid Data)}{P(M2\\mid Data)} \\hspace{0.5cm}=\\hspace{0.5cm}\\frac{P(Data \\mid M1)\\cdot P(M1)}{P(Data \\mid M2)\\cdot P(M2)}$$"
+    "$$ \\frac{P(M1 \\mid Data)}{P(M2\\mid Data)} \\hspace{0.5cm}=\\hspace{0.5cm}\\frac{P(Data \\mid M1)\\cdot P(M1)}{P(Data \\mid M2)\\cdot P(M2)}\\hspace{0.5cm}=\\hspace{0.5cm} \\underbrace{\\bigg(\\frac{P(Data \\mid M1)}{P(Data \\mid M2)}\\bigg)}_{\\text{Bayes Factor}}\\cdot \\underbrace{\\bigg(\\frac{P(M1)}{P(M2)}\\bigg)}_\\text{Prior Odds}$$\n",
+    "\n",
+    "From this expression, if we cannot reliably know a priori whether one model does better than the other, than the model comparison is a simple marginal likelihood ratio test, and that one prefers a model that produces significantly higher marginal likelihood/model evidence. This approach has the added advantage that models with higher complexity automatically is at a disadvantage due to smaller marginal likelihoods."
    ]
   },
   {
@@ -557,14 +571,50 @@
    "metadata": {},
    "source": [
     "### 2.2 Variational Inference\n",
-    "__ 1. KL divergence__"
+    "__ 1. KL divergence__  \n",
+    "__ 2. Evidence Lower Bound(ELBO) Optimization__"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.3 Markov-Chain Monte Carlo\n",
+    "__ Metropolis - Hastings__  \n",
+    "__ Gibbs sampling __    \n",
+    "__ Slice Sampling __"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"BNN\"></a>\n",
     "## 3. Bayesian Neural Network Implementation in Edward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# define a fully-connected neural network\n",
+    "def fully_connected_net(x,W_0,b_0,W_1,b_1,W_2,b_2):\n",
+    "    h = tf.tanh(tf.matmul*X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# define a convolutional neural network"
    ]
   },
   {
@@ -594,6 +644,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.2"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 1,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
