--- a/ed_scripts/Bayesian Nets.ipynb
+++ b/ed_scripts/Bayesian Nets.ipynb
@@ -573,6 +573,7 @@
    "metadata": {},
    "source": [
     "### 2.2 Variational Inference\n",
+    "Variational inference is a technique used for approximate inference, particularly for either intractable integrals, or to approximate tractable distributions with low-dimensional\n",
     "__ 1. KL divergence__  \n",
     "__ 2. Evidence Lower Bound(ELBO) Optimization__"
    ]
@@ -605,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -620,10 +621,15 @@
     }
    ],
    "source": [
+    "# use Keras and Edward\n",
+    "from edward.models import Normal, OneHotCategorical\n",
+    "import edward as ed\n",
+    "import tensorflow as tf\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "\n",
+    "tf.reset_default_graph()\n",
     "# download the MNIST dataset\n",
-    "mnist = input_data.read_data_sets(\"MNIST_data/\")\n",
+    "mnist = input_data.read_data_sets(\"MNIST_data/\",one_hot = True)\n",
     "\n",
     "# assign train test data with corresponding features(x) and labels(y)\n",
     "x_train = mnist.train.images\n",
@@ -635,106 +641,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hduser1/anaconda3/envs/py36/lib/python3.6/site-packages/edward/util/random_variables.py:52: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  not np.issubdtype(value.dtype, np.float) and \\\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/hduser1/anaconda3/envs/py36/lib/python3.6/site-packages/tensorflow/contrib/distributions/python/ops/onehot_categorical.py:201: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "\n",
+      "Future major versions of TensorFlow will allow gradients to flow\n",
+      "into the labels input on backprop by default.\n",
+      "\n",
+      "See tf.nn.softmax_cross_entropy_with_logits_v2.\n",
+      "\n",
+      "1000/1000 [100%] ██████████████████████████████ Elapsed: 949s | Loss: nan\n"
+     ]
+    }
+   ],
    "source": [
-    "# use Keras and Edward\n",
-    "from edward.models import Normal\n",
-    "from keras"
+    "# define a neural network with two hidden layers that uses the tanh activation\n",
+    "\n",
+    "def neural_network_classifier(x, W_0, W_1, W_2, b_0,b_1, b_2 ):\n",
+    "    # first hidden layer\n",
+    "    h = tf.nn.relu(tf.matmul(x, W_0) + b_0)\n",
+    "    \n",
+    "    # second hidden layer\n",
+    "    h = tf.nn.relu(tf.matmul(h, W_1) + b_1)\n",
+    "    \n",
+    "    # final output\n",
+    "    h = tf.nn.softmax(tf.matmul(h, W_2) + b_2)\n",
+    "    \n",
+    "    return h\n",
+    "\n",
+    "N, D = x_train.shape\n",
+    "\n",
+    "W_0 = Normal(loc=tf.zeros([D, 100]), scale=tf.ones([D, 100]))\n",
+    "W_1 = Normal(loc=tf.zeros([100, 100]), scale=tf.ones([100, 100]))\n",
+    "W_2 = Normal(loc=tf.zeros([100, 10]), scale=tf.ones([100, 10]))\n",
+    "b_0 = Normal(loc=tf.zeros(100), scale=tf.ones(100))\n",
+    "b_1 = Normal(loc=tf.zeros(100), scale=tf.ones(100))\n",
+    "b_2 = Normal(loc=tf.zeros(10), scale=tf.ones(10))\n",
+    "\n",
+    "\n",
+    "x = tf.placeholder(tf.float32,[N,D])\n",
+    "y = OneHotCategorical(probs = neural_network_classifier(x, W_0,W_1, W_2, b_0, b_1, b_2))\n",
+    "    \n",
+    "\n",
+    "# INFERENCE\n",
+    "with tf.variable_scope(\"posterior\"):\n",
+    "    with tf.variable_scope(\"qW_0\"):\n",
+    "        loc = tf.get_variable(\"loc\", [D, 100])\n",
+    "        scale = tf.nn.softplus(tf.get_variable(\"scale\", [D, 100]))\n",
+    "        qW_0 = Normal(loc=loc, scale=scale)\n",
+    "    with tf.variable_scope(\"qW_1\"):\n",
+    "        loc = tf.get_variable(\"loc\", [100, 100])\n",
+    "        scale = tf.nn.softplus(tf.get_variable(\"scale\", [100, 100]))\n",
+    "        qW_1 = Normal(loc=loc, scale=scale)\n",
+    "    with tf.variable_scope(\"qW_2\"):\n",
+    "        loc = tf.get_variable(\"loc\", [100, 10])\n",
+    "        scale = tf.nn.softplus(tf.get_variable(\"scale\", [100, 10]))\n",
+    "        qW_2 = Normal(loc=loc, scale=scale)\n",
+    "    with tf.variable_scope(\"qb_0\"):\n",
+    "        loc = tf.get_variable(\"loc\", [100])\n",
+    "        scale = tf.nn.softplus(tf.get_variable(\"scale\", [100]))\n",
+    "        qb_0 = Normal(loc=loc, scale=scale)\n",
+    "    with tf.variable_scope(\"qb_1\"):\n",
+    "        loc = tf.get_variable(\"loc\", [100])\n",
+    "        scale = tf.nn.softplus(tf.get_variable(\"scale\", [100]))\n",
+    "        qb_1 = Normal(loc=loc, scale=scale)\n",
+    "    with tf.variable_scope(\"qb_2\"):\n",
+    "        loc = tf.get_variable(\"loc\", [10])\n",
+    "        scale = tf.nn.softplus(tf.get_variable(\"scale\", [10]))\n",
+    "        qb_2 = Normal(loc=loc, scale=scale)\n",
+    "\n",
+    "inference = ed.KLqp({W_0: qW_0, b_0: qb_0,\n",
+    "                       W_1: qW_1, b_1: qb_1,\n",
+    "                       W_2: qW_2, b_2: qb_2}, data={x: x_train, y: y_train})\n",
+    "          \n",
+    "inference.run(n_samples=5, n_iter=1000)\n",
+    "inference.finalize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'D' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-d7dbc75ccb33>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mW_0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNormal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscale\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0mW_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNormal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscale\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0mW_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNormal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscale\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'D' is not defined"
+      "(55000, 784)\n",
+      "(55000,)\n"
      ]
     }
    ],
    "source": [
-    "# define a fully-connected neural network\n",
-    "# for the mnist problem\n",
-    "\n",
-    "\n",
-    "# download the MNIST dataset\n",
-    "mnist = input_data.read_data_sets(\"MNIST_data/\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "# define a neural network with two hidden layers that uses the tanh activation\n",
-    "\n",
-    "def neural_network_classifier(x):\n",
-    "    # first hidden layer\n",
-    "    h = tf.nn.softmax(tf.matmul(x, W_0) + b_0)\n",
-    "    \n",
-    "    # second hidden layer\n",
-    "    h = tf.nn.softmax(tf.matmul(h, W_1) + b_1)\n",
-    "    \n",
-    "    # final output\n",
-    "    h = tf.nn.softmax(tf.matmul(h, W_2) + b_2)\n",
-    "    return tf.reshape(h, [-1])\n",
-    "\n",
-    "\n",
-    "W_0 = Normal(loc=tf.zeros([D, 10]), scale=tf.ones([D, 10]))\n",
-    "W_1 = Normal(loc=tf.zeros([10, 10]), scale=tf.ones([10, 10]))\n",
-    "W_2 = Normal(loc=tf.zeros([10, 1]), scale=tf.ones([10, 1]))\n",
-    "b_0 = Normal(loc=tf.zeros(10), scale=tf.ones(10))\n",
-    "b_1 = Normal(loc=tf.zeros(10), scale=tf.ones(10))\n",
-    "b_2 = Normal(loc=tf.zeros(1), scale=tf.ones(1))\n",
-    "\n",
-    "x = tf.cast(x_train, dtype=tf.float32)\n",
-    "y = Categorical(probs = neural_network_classifier(x))"
+    "print(x_train.shape)\n",
+    "print(y_train.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from edward.models import Categorical"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(55000, 784)"
+       "array([7, 3, 4, ..., 5, 6, 8], dtype=uint8)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_train.shape"
+    "y_train"
    ]
   }
  ],
