--- a/ed_scripts/Bayesian Nets.ipynb
+++ b/ed_scripts/Bayesian Nets.ipynb
@@ -886,7 +886,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can do this same thing with Keras. This helps avoid the tedious process of defining every step/hierarchy of the neural network model."
+    "You can do this same thing with Keras. This helps avoid the tedious process of defining every step/hierarchy of the neural network model.\n",
+    "\n",
+    "(TODO)"
    ]
   },
   {
