--- a/ed_scripts/Bayesian Nets.ipynb
+++ b/ed_scripts/Bayesian Nets.ipynb
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -839,9 +839,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hduser1/anaconda3/envs/py36/lib/python3.6/site-packages/edward/util/random_variables.py:52: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  not np.issubdtype(value.dtype, np.float) and \\\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -854,13 +862,12 @@
       "\n",
       "See tf.nn.softmax_cross_entropy_with_logits_v2.\n",
       "\n",
-      "100/100 [100%] ██████████████████████████████ Elapsed: 100s | Loss: nan\n"
+      " 290/1000 [ 28%] ████████                       ETA: 6054s | Loss: nan"
      ]
     }
    ],
    "source": [
     "# define a neural network with two hidden layers that uses the tanh activation\n",
-    "sess = \n",
     "\n",
     "def neural_network_classifier(x, W_0, W_1, W_2, b_0,b_1, b_2 ):\n",
     "    # first hidden layer\n",
@@ -915,11 +922,12 @@
     "        scale = tf.nn.softplus(tf.get_variable(\"scale\", [10]))\n",
     "        qb_2 = Normal(loc=loc, scale=scale)\n",
     "\n",
-    "inference = ed.KLqp({W_0: qW_0, b_0: qb_0,\n",
+    "inference = ed.KLpq({W_0: qW_0, b_0: qb_0,\n",
     "                       W_1: qW_1, b_1: qb_1,\n",
     "                       W_2: qW_2, b_2: qb_2}, data={x: x_train, y: y_train})\n",
+    "\n",
     "inference.initialize(logdir='log')          \n",
-    "inference.run(n_samples=5, n_iter=100)\n",
+    "inference.run(n_samples=100, n_iter=1000)\n",
     "inference.finalize()"
    ]
   },
@@ -946,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -962,27 +970,34 @@
     "test_features = tf.placeholder(tf.float32, shape=x_test.shape)\n",
     "y_pred = OneHotCategorical(probs=neural_network_classifier(test_features, qW_0, qW_1, qW_2, qb_0,qb_1, qb_2 ))\n",
     "print(\"Accuracy on test MNIST data for the Bayesian :\")\n",
-    "print(ed.evaluate('categorical_accuracy', data={test_features: x_test, y_pred:y_pred}))"
+    "print(ed.evaluate('categorical_accuracy', data={test_features: x_test, y_pred:}))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sess' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-24d57f831552>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msess\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'sess' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., ..., 1., 0., 0.],\n",
+       "       [0., 0., 1., ..., 0., 0., 0.],\n",
+       "       [0., 1., 0., ..., 0., 0., 0.],\n",
+       "       ...,\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "y_test"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -999,18 +1014,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.2"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
